# django-blog

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Pipfile  README.md  conftest.py  db.sqlite3  docker-compose-prod_template.yml  docker-compose.yml  drun  env  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run  setup.cfg
accounts/: tests.py  urls.py  views.py
config/: settings.py  test.py  urls.py
djangoblog/: apps.py  models.py  tests.py  urls.py  views.py
docs/: changelog.rst  conf.py  contributing.rst  create_new_posts.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_21411594f0ec1795_0001_initial_py.html  d_21411594f0ec1795_0002_customuser_country_py.html  d_2404c9c06e601cf8_admin_py.html  d_2404c9c06e601cf8_apps_py.html  d_2404c9c06e601cf8_feeds_py.html  d_2404c9c06e601cf8_forms_py.html  d_2404c9c06e601cf8_models_py.html  d_2404c9c06e601cf8_sitemaps_py.html  d_2404c9c06e601cf8_urls_py.html  d_2404c9c06e601cf8_views_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_5e734336af8d6f01_posts_tags_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_cfdc24fe67cf3473_admin_py.html  d_cfdc24fe67cf3473_apps_py.html  d_cfdc24fe67cf3473_models_py.html  d_cfdc24fe67cf3473_urls_py.html  d_cfdc24fe67cf3473_views_py.html  d_d1483e09760cc978_factories_py.html  d_d1483e09760cc978_test_models_py.html  d_d1483e09760cc978_test_urls_py.html  d_d1483e09760cc978_test_views_py.html  (+44 more)
(+68 files in other folders)
