[metadata]
name = django-blog
version = 0.1.0
url = https://github.com/kevinbowen777/django-blog.git
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A simple Django blog applicatin
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
project_urls =
    Source = https://github.com/kevinbowen777/django-blog/

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 4.0.4

[flake8]
select = B,B9,BLK,C,E,F,I,S,W
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    conftest.py
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    accounts/migrations/*,
    djangoblog/migrations/*,
    pages/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 79
per-file-ignores =
    accounts/tests.py:S101,S106
    accounts/tests/*:S101,S106
    config/tests.py:S101,S106
    config/tests/*:S101,S106
    djangoblog/tests.py:S101,S106
    djangoblog/tests/*:S101,S106
    pages/tests.py:S101,S106
    pages/tests/*:S101,S106
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
    # app/tests/conftest.py: E501
